src/test/resources/purescript_examples/failing/Let.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith CycleInDeclaration\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PSASTWrapperElement(ValueDeclaration)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
                PSASTWrapperElement(NamedBinder)
                  <empty list>
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PSASTWrapperElement(Value)
                  PSASTWrapperElement(PrefixValue)
                    PSASTWrapperElement(Var)
                      PSASTWrapperElement(Qualified)
                        PsiElement(identifier)('x')
                        PsiElement(whitespace)(' ')
              PsiElement(in)('in')
              PsiElement(whitespace)(' ')
              PSASTWrapperElement(Value)
                PSASTWrapperElement(PrefixValue)
                  PSASTWrapperElement(Var)
                    PSASTWrapperElement(Qualified)
                      PsiElement(identifier)('x')
                      PsiElement(whitespace)('\n')
